feat: added search chats
